# MovieBox-Tui

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  SECURITY.md  install.ps1  install.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
scripts/: release.sh
src/: lib.rs  main.rs
src/providers/: mod.rs
src/providers/moviebox/: client.rs  crypto.rs  mod.rs
src/tui/: action.rs  app.rs  event.rs  mod.rs  state.rs  theme.rs
src/tui/screens/: details.rs  help.rs  home.rs  logs.rs
src/v3/: client.rs  crypto.rs  mod.rs
