[package]
name = "moviebox-tui"
exclude = ["assets/", ".github/"]
version = "0.1.3"
edition = "2024"
description = "A terminal client for finding and streaming movies, TV shows, and anime from the MovieBox catalog."
repository = "https://github.com/mesamirh/MovieBox-Tui"
homepage = "https://github.com/mesamirh/MovieBox-Tui"
license = "MIT OR Apache-2.0"
keywords = ["tui", "moviebox", "streaming", "movies", "cli"]
categories = ["command-line-utilities", "multimedia"]
readme = "README.md"
rust-version = "1.85.0"

[dependencies]
arboard = "3.6.1"
base64 = "0.22.1"
crossterm = "0.29.0"
dirs = "6.0.0"
hmac = "0.13.0"
image = "0.25.10"
lru = "0.18.1"
md-5 = "0.11.0"
rand = "0.10.2"
ratatui = "0.30.2"
ratatui-image = "11.0.6"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
update-informer = "1.3.0"
url = "2.5.8"

[lib]
name = "moviebox_tui"
path = "src/lib.rs"

